tests/cases_invalid/misc/run_block_priorities/.expected
error: `i32` literal out of range
 --> ./cases_invalid/misc/run_block_priorities/main.shd:1:15
  |
1 | run priority -789456123789 {
  |               ^ here
  |
